# arch-setup-playbook

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  install.yml  main.yml  pyproject.toml  update.yml
roles/aur-packages/defaults/: main.yml
roles/aur-packages/handlers/: main.yml
roles/aur-packages/tasks/: main.yml  update.yml
roles/config/defaults/: main.yml
roles/config/handlers/: main.yml
roles/config/tasks/: asdf-vm.yml  auto-cpufreq.yml  dotfiles.yml  libvirt.yml  main.yml  mise.yml  neovim.yml  pipx.yml  reflector.yml  rtx.yml  rules.yml  rust.yml  tmux.yml  update.yml  zsh.yml
roles/config/templates/: 30-touchpad.conf.j2  backlight.rules.j2  reflector.conf.j2
roles/flatpak/defaults/: main.yml
roles/flatpak/handlers/: main.yml
roles/flatpak/tasks/: main.yml  update.yml
roles/pacman/defaults/: main.yml
roles/pacman/handlers/: main.yml
roles/pacman/tasks/: main.yml  update.yml
roles/setup-user/defaults/: main.yml
roles/setup-user/handlers/: main.yml
roles/setup-user/tasks/: main.yml
tests/: install_aur.sh  install_config.sh  install_pacman.sh
