[tool.poetry]
name = "arch-setup-playbook"
version = "0.1.0"
description = "Personal arch linux setup&configuration ansible playbook."
authors = ["Zahid Kizmaz <tech@zahid.rocks>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "arch_setup_playbook"}]

[tool.poetry.dependencies]
python = "~3.11"
ansible-core = "^2.14.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
yamllint = "^1.29.0"
ansible-lint = {markers = "platform_system != \"Windows\"", version = "^6.14.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
